--- a/safety-management.html
+++ b/safety-management.html
@@ -25,9 +25,9 @@ header:
    text: Safeguarding Every Adventure Through Rigorous Practices
 ---
 
-<section class="px-5p py-10p">
-
-    <div class="pb-10p">
+<section class="max-w-screen-2xl mx-auto">
+  <div class="px-5p pt-15p sm:pt-10p 2xl:pt-5p pb-15p sm:pb-10p">
+    <div class="pb-10p 2xl:pb-5p">
         <p class="title-font text-2xl sm:text-4xl"> AJ Hackett International is committed to effectively managing health, safety, and welfare for all of our stakeholders. </p>
     </div>
 
@@ -46,7 +46,7 @@ header:
         <li class="pb-1">Safety redundancies are built into our jump systems to provide an extra level of comfort and increased safety. This includes Bungy cords with webbing, swimming pools and water under the jump zone, and bespoke dampener systems designed specifically for use on AJ Hackett International sites.</li>
         <li class="pb-1"><strong>Medical Conditions:</strong> We request that our clients disclose any medical conditions they may have to our staff before participating in any of our adventure activities. This information is crucial to ensure the safety and suitability of the activities for each individual.</li>
     </ul>
-    
+  </div> 
 </section>
 
 
