--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@ seo:
   hide-from-google: true
 header:
  - image: /images/contact-aj-hackett-international.png
-   position: 
+   position: 50% 50%
    label: 
    title: Get In Touch
    text: "We’re Here to Help—Reach Out Anytime"
@@ -19,104 +19,103 @@ header:
 
 <!-----Contact Intro Section-------->
 
-<section class="px-5p pt-10p">
-
-    <div class="pb-10p">
-        <p class="title-font text-2xl sm:text-4xl">We look forward to hearing from you!</p>
-    </div>
-
-    <div class="grid grid-cols-1 md:grid-cols-2 gap-5p mb-10p">
-        <div class="pr-5p">
-            <p class="text-lg">Please fill out our contact form to get in touch with us for any inquiries or requests. </p>
+<section class="max-w-screen-2xl mx-auto">
+    <div class="px-5p pt-15p sm:pt-10p 2xl:pt-5p pb-15p sm:pb-10p lg:pb-5p">
+        <div class="pb-10p">
+            <p class="title-font text-2xl sm:text-4xl">We look forward to hearing from you!</p>
         </div>
-        <div>
-            <form action="#" method="POST" class="space-y-4">
-                <div>
-                    <label for="name" class="block text-sm font-medium text-gray-700">Name</label>
-                    <input type="text" id="name" name="name" class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm" required>
-                </div>
-                <div>
-                    <label for="email" class="block text-sm font-medium text-gray-700">Email</label>
-                    <input type="email" id="email" name="email" class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm" required>
-                </div>
-                <div>
-                    <label for="message" class="block text-sm font-medium text-gray-700">Message</label>
-                    <textarea id="message" name="message" rows="4" class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm" required></textarea>
-                </div>
-                <button type="submit" class="inline-flex items-center px-4 py-2 border border-transparent text-base font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">Send Message</button>
-            </form>
-        </div>
-    </div>
 
-    <div class="col-span-full my-10p">
-        <p class="title-font text-3xl mb-5p">Our Locations</p>
-        <ul class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
-            <li class="p-5p bg-grey rounded-md">
-                <p class="text-lg font-medium pb-2p">International Office</p>
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-5p mb-10p lg:mb-5p">
+            <div class="pr-5p">
+                <p class="text-lg">Please fill out our contact form to get in touch with us for any inquiries or requests. </p>
+            </div>
+            <div>
+                <form action="#" method="POST" class="space-y-4 mb-15p">
+                    <div>
+                        <label for="name" class="block text-sm font-medium text-gray-700">Name</label>
+                        <input type="text" id="name" name="name" class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm" required>
+                    </div>
+                    <div>
+                        <label for="email" class="block text-sm font-medium text-gray-700">Email</label>
+                        <input type="email" id="email" name="email" class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm" required>
+                    </div>
+                    <div>
+                        <label for="message" class="block text-sm font-medium text-gray-700">Message</label>
+                        <textarea id="message" name="message" rows="4" class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm" required></textarea>
+                    </div>
+                    <button type="submit" class="inline-flex items-center px-4 py-2 border border-transparent text-base font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">Send Message</button>
+                </form>
+            </div>
+        </div>
+
+        <div class="col-span-full my-10p lg:my-5p">
+            <p class="title-font text-3xl mb-5p">Our Locations</p>
+            <ul class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
+                <li class="p-5p bg-grey rounded-md">
+                    <p class="text-lg font-medium pb-2p">International Office</p>
+                        <p>Address:<br>
+                            <span class="pl-4">End of McGregor Rd </span><br>
+                            <span class="pl-4">Smithfield QLD 4878  </span><br>
+                            <span class="pl-4">Australia  </span>
+                        </p>
+                        <a href="tel:+61473733699" class="block mt-2" aria-label="Call us">Call <span class="contact-dark-blue">+61 473 733 699</span></a>
+                        <a href="mailto:international@ajhackett.com" class="block mt-1" aria-label="Send us an email">Email <span class="contact-dark-blue">international@ajhackett.com</span></a>
+                </li>
+                <li class="p-5p bg-grey rounded-md">
+                    <p class="text-lg font-medium pb-2p">Skypark Cairns</p>
                     <p>Address:<br>
                         <span class="pl-4">End of McGregor Rd </span><br>
                         <span class="pl-4">Smithfield QLD 4878  </span><br>
                         <span class="pl-4">Australia  </span>
                     </p>
-                    <a href="tel:+61473733699" class="block mt-2" aria-label="Call us">Call <span class="contact-dark-blue">+61 473 733 699</span></a>
-                    <a href="mailto:international@ajhackett.com" class="block mt-1" aria-label="Send us an email">Email <span class="contact-dark-blue">international@ajhackett.com</span></a>
-            </li>
-            <li class="p-5p bg-grey rounded-md">
-                <p class="text-lg font-medium pb-2p">Skypark Cairns</p>
-                <p>Address:<br>
-                    <span class="pl-4">End of McGregor Rd </span><br>
-                    <span class="pl-4">Smithfield QLD 4878  </span><br>
-                    <span class="pl-4">Australia  </span>
-                </p>
-                <a href="tel:+61740577188" class="block mt-2" aria-label="Call us">Call <span class="contact-dark-blue">+61 7 4057 7188</span></a>
-                <a href="" class="block mt-1" aria-label="Reach Cairns via their contact form">You can also reach Cairns via their contact form <span class="contact-dark-blue">here</span></a>
-            </li>
-            <li class="p-5p bg-grey rounded-md">
-                <p class="text-lg font-medium pb-2p">Skypark Sentosa</p>
-                <p>Address:<br>
-                    <span class="pl-4">30 Siloso Beach Walk </span><br>
-                    <span class="pl-4">Sentosa Island  </span><br>
-                    <span class="pl-4">Singapore  </span>
-                </p>
-                <a href="tel:+6569113070" class="block mt-2" aria-label="Call us">Call <span class="contact-dark-blue">+65 6911 3070</span></a>
-                <a href="" class="block mt-1" aria-label="Reach Sentosa via their contact form">You can also reach Sentosa via their contact form <span class="contact-dark-blue">here</span></a>
-            </li>
-            <li class="p-5p bg-grey rounded-md">
-                <p class="text-lg font-medium pb-2p">Skypark Macau</p>
-                <p>Address:<br>
-                    <span class="pl-4">Level T2</span><br>
-                    <span class="pl-4">Adventure Zone Macau Tower </span><br>
-                    <span class="pl-4">Macau 999078  </span><br>
-                    <span class="pl-4">SAR China </span>
-                </p>
-                <a href="tel:+85389888656" class="block mt-2" aria-label="Call us">Call <span class="contact-dark-blue">+853 8988 8656</span></a>
-                <a href="" class="block mt-1" aria-label="Reach Macau via their contact form">You can also reach Macau via their contact form <span class="contact-dark-blue">here</span></a>
-            </li>
-            <li class="p-5p bg-grey rounded-md">
-                <p class="text-lg font-medium pb-2p">Skypark Normandie</p>
-                <p>Address:<br>
-                    <span class="pl-4">Souleuvre Viaduct</span><br>
-                    <span class="pl-4">2 Chem. du Viaduc </span><br>
-                    <span class="pl-4">14350 Souleuvre en Bocage </span>
-                    <span class="pl-4">France</span>
-                </p>
-                <a href="tel:+33231663166" class="block mt-2" aria-label="Call us">Call <span class="contact-dark-blue">+33 2 31 66 31 66</span></a>
-                <a href="" class="block mt-1" aria-label="Reach Normandie via their contact form">You can also reach Normandie via their contact form <span class="contact-dark-blue">here</span></a>
-            </li>
-            <li class="p-5p bg-grey rounded-md">
-                <p class="text-lg font-medium pb-2p">Pondok Santi Estate</p>
-                <p>Address:<br>
-                    <span class="pl-4">Dusun Gili Trawangan, Gili Indah</span><br>
-                    <span class="pl-4">Kec. Pemenang</span><br>
-                    <span class="pl-4">Kabupaten Lombok Utara</span><br>
-                    <span class="pl-4">Nusa Tenggara Bar. 83352 </span><br>
-                    <span class="pl-4">Indonesia</span>
-                </p>
-                <a href="tel:+6281907057504" class="block mt-2" aria-label="Call us">Call <span class="contact-dark-blue">+62 819 0705 7504</span></a>
-                <a href="" class="block mt-1" aria-label="Reach Pondok Santi Estate via their contact form">You can also reach Pondok Santi Estate via their contact form <span class="contact-dark-blue">here</span></a>
-            </li>
-        </ul>
+                    <a href="tel:+61740577188" class="block mt-2" aria-label="Call us">Call <span class="contact-dark-blue">+61 7 4057 7188</span></a>
+                    <a href="" class="block mt-1" aria-label="Reach Cairns via their contact form">You can also reach Cairns via their contact form <span class="contact-dark-blue">here</span></a>
+                </li>
+                <li class="p-5p bg-grey rounded-md">
+                    <p class="text-lg font-medium pb-2p">Skypark Sentosa</p>
+                    <p>Address:<br>
+                        <span class="pl-4">30 Siloso Beach Walk </span><br>
+                        <span class="pl-4">Sentosa Island  </span><br>
+                        <span class="pl-4">Singapore  </span>
+                    </p>
+                    <a href="tel:+6569113070" class="block mt-2" aria-label="Call us">Call <span class="contact-dark-blue">+65 6911 3070</span></a>
+                    <a href="" class="block mt-1" aria-label="Reach Sentosa via their contact form">You can also reach Sentosa via their contact form <span class="contact-dark-blue">here</span></a>
+                </li>
+                <li class="p-5p bg-grey rounded-md">
+                    <p class="text-lg font-medium pb-2p">Skypark Macau</p>
+                    <p>Address:<br>
+                        <span class="pl-4">Level T2</span><br>
+                        <span class="pl-4">Adventure Zone Macau Tower </span><br>
+                        <span class="pl-4">Macau 999078  </span><br>
+                        <span class="pl-4">SAR China </span>
+                    </p>
+                    <a href="tel:+85389888656" class="block mt-2" aria-label="Call us">Call <span class="contact-dark-blue">+853 8988 8656</span></a>
+                    <a href="" class="block mt-1" aria-label="Reach Macau via their contact form">You can also reach Macau via their contact form <span class="contact-dark-blue">here</span></a>
+                </li>
+                <li class="p-5p bg-grey rounded-md">
+                    <p class="text-lg font-medium pb-2p">Skypark Normandie</p>
+                    <p>Address:<br>
+                        <span class="pl-4">Souleuvre Viaduct</span><br>
+                        <span class="pl-4">2 Chem. du Viaduc </span><br>
+                        <span class="pl-4">14350 Souleuvre en Bocage </span>
+                        <span class="pl-4">France</span>
+                    </p>
+                    <a href="tel:+33231663166" class="block mt-2" aria-label="Call us">Call <span class="contact-dark-blue">+33 2 31 66 31 66</span></a>
+                    <a href="" class="block mt-1" aria-label="Reach Normandie via their contact form">You can also reach Normandie via their contact form <span class="contact-dark-blue">here</span></a>
+                </li>
+                <li class="p-5p bg-grey rounded-md">
+                    <p class="text-lg font-medium pb-2p">Pondok Santi Estate</p>
+                    <p>Address:<br>
+                        <span class="pl-4">Dusun Gili Trawangan, Gili Indah</span><br>
+                        <span class="pl-4">Kec. Pemenang</span><br>
+                        <span class="pl-4">Kabupaten Lombok Utara</span><br>
+                        <span class="pl-4">Nusa Tenggara Bar. 83352 </span><br>
+                        <span class="pl-4">Indonesia</span>
+                    </p>
+                    <a href="tel:+6281907057504" class="block mt-2" aria-label="Call us">Call <span class="contact-dark-blue">+62 819 0705 7504</span></a>
+                    <a href="" class="block mt-1" aria-label="Reach Pondok Santi Estate via their contact form">You can also reach Pondok Santi Estate via their contact form <span class="contact-dark-blue">here</span></a>
+                </li>
+            </ul>
+        </div>   
     </div>
-    
-
 </section>
