--- a/purpose-promise-values.html
+++ b/purpose-promise-values.html
@@ -19,7 +19,7 @@ seo:
   hide-from-google: true
 header:
  - image: /images/purpose-promise-values-aj-hackett-international.png
-   position: 
+   position: 50% 50%
    label: 
    title: Our Purpose, Promise & Values
    text: The Foundations of Our Adventure Philosophy
@@ -36,75 +36,74 @@ values-image-alt:
 
 <!-----Purpose-------->
 
-<section class="px-5p pt-10p">
-
-    <div class="pb-5p">
-        <p class="title-font text-2xl sm:text-4xl"> Our Purpose </p>
-    </div>
-
-    <div class="grid grid-cols-2 mb-5p">
-        <div class="pr-5p">
-            <p> Our purpose is to positively change lives and help people all over the world overcome their personal barriers by achieving something they never thought possible. </p>
+<section class="max-w-screen-2xl mx-auto">
+    <div class="px-5p pt-15p sm:pt-10p">
+        <div class="pb-5p">
+            <p class="title-font text-2xl sm:text-4xl"> Our Purpose </p>
         </div>
-        <div class="relative h-full min-h-30 sm:min-h-50">
-            <img class="absolute inset-0 w-full h-full object-cover rounded-3xl" 
-                 src="{{ purpose-image }}" 
-                 style="object-position: {{ purpose-image-position }};" 
-                 alt="{{ purpose-image-alt }}" />
+        <div class="sm:grid sm:grid-cols-2 mb-5p">
+            <div class="sm:pr-5p">
+                <p class="pb-5p"> Our purpose is to positively change lives and help people all over the world overcome their personal barriers by achieving something they never thought possible. </p>
+            </div>
+            <div class="relative h-full min-h-30 sm:min-h-50">
+                <img class="absolute inset-0 w-full h-full object-cover rounded-3xl" 
+                    src="{{ purpose-image }}" 
+                    style="object-position: {{ purpose-image-position }};" 
+                    alt="{{ purpose-image-alt }}" />
+            </div>
         </div>
     </div>
-
 </section>
 
 <!-----Promise-------->
 
-<section class="px-5p pt-10p">
-
-    <div class="pb-5p">
-        <p class="title-font text-2xl sm:text-4xl"> Our Promise </p>
-    </div>
-
-    <div class="grid grid-cols-2 mb-5p">
-        <div class="pr-5p">
-            <p> To act sustainably and be trusted for the care of our people, our customers, and the planet, while pursuing quality, creativity, and innovation in adventure tourism destinations. As a result, our promise is shifting our mindset from the inward-looking corporate visions and missions of the past to a fresh, open-minded perspective in which we can be a trusted adventure tourism operator for the future. </p>
+<section class="max-w-screen-2xl mx-auto">
+    <div class="px-5p pt-15p sm:pt-10p xl:pt-5p">
+        <div class="pb-5p">
+            <p class="title-font text-2xl sm:text-4xl"> Our Promise </p>
         </div>
-        <div class="relative h-full min-h-30 sm:min-h-50">
-            <img class="absolute inset-0 w-full h-full object-cover rounded-3xl" 
-                 src="{{ promise-image }}" 
-                 style="object-position: {{ promise-image-position }};" 
-                 alt="{{ promise-image-alt }}" />
+
+        <div class="sm:grid sm:grid-cols-2 mb-5p">
+            <div class="sm:pr-5p">
+                <p class="pb-5p"> To act sustainably and be trusted for the care of our people, our customers, and the planet, while pursuing quality, creativity, and innovation in adventure tourism destinations. As a result, our promise is shifting our mindset from the inward-looking corporate visions and missions of the past to a fresh, open-minded perspective in which we can be a trusted adventure tourism operator for the future. </p>
+            </div>
+            <div class="relative h-full min-h-30 sm:min-h-50">
+                <img class="absolute inset-0 w-full h-full object-cover rounded-3xl" 
+                    src="{{ promise-image }}" 
+                    style="object-position: {{ promise-image-position }};" 
+                    alt="{{ promise-image-alt }}" />
+            </div>
         </div>
     </div>
-
 </section>
 
 <!-----Values-------->
 
-<section class="px-5p pt-10p">
-
-    <div class="pb-5p">
-        <p class="title-font text-2xl sm:text-4xl"> Our Values </p>
-    </div>
-
-    <div class="grid grid-cols-2 mb-5p">
-        <div class="pr-5p">
-            <p class="title-font text-xl">Respect</p>
-            <p class="pb-2p"> We value the communities and the environment we share, always acting responsibly and fully committing to open and honest relationships. </p>
-            <p class="title-font text-xl">Adventure</p>
-            <p class="pb-2p"> At the heart of what we do is personal adventure. Be bold like us. </p>
-            <p class="title-font text-xl">Innovation</p>
-            <p class="pb-2p"> We embrace change, always striving to improve the way we work and develop our unique guest experience. </p>
-            <p class="title-font text-xl">Safety</p>
-            <p class="pb-2p"> We are trusted to manage risk and operate with a safety-first principle. </p>
-            <p class="title-font text-xl">Experience</p>
-            <p class="pb-2p"> We create fun, memorable experiences for our customers and unforgettable employment opportunities for our team. </p>
+<section class="max-w-screen-2xl mx-auto">
+    <div class="px-5p pt-15p sm:pt-10p xl:pt-5p pb-15p md:pb-10p">
+        <div class="pb-5p">
+            <p class="title-font text-2xl sm:text-4xl"> Our Values </p>
         </div>
-        <div class="relative h-full min-h-30 sm:min-h-50">
-            <img class="absolute inset-0 w-full h-full object-cover rounded-3xl" 
-                 src="{{ values-image }}" 
-                 style="object-position: {{ values-image-position }};" 
-                 alt="{{ values-image-alt }}" />
+
+        <div class="sm:grid sm:grid-cols-2 mb-5p">
+            <div class="sm:pr-5p pb-5p">
+                <p class="title-font text-xl">Respect</p>
+                <p class="pb-5p"> We value the communities and the environment we share, always acting responsibly and fully committing to open and honest relationships. </p>
+                <p class="title-font text-xl">Adventure</p>
+                <p class="pb-5p"> At the heart of what we do is personal adventure. Be bold like us. </p>
+                <p class="title-font text-xl">Innovation</p>
+                <p class="pb-5p"> We embrace change, always striving to improve the way we work and develop our unique guest experience. </p>
+                <p class="title-font text-xl">Safety</p>
+                <p class="pb-5p"> We are trusted to manage risk and operate with a safety-first principle. </p>
+                <p class="title-font text-xl">Experience</p>
+                <p class="pb-5p"> We create fun, memorable experiences for our customers and unforgettable employment opportunities for our team. </p>
+            </div>
+            <div class="relative h-full min-h-30 sm:min-h-50">
+                <img class="absolute inset-0 w-full h-full object-cover rounded-3xl" 
+                    src="{{ values-image }}" 
+                    style="object-position: {{ values-image-position }};" 
+                    alt="{{ values-image-alt }}" />
+            </div>
         </div>
     </div>
-
 </section>
