--- a/accessibility.html
+++ b/accessibility.html
@@ -15,11 +15,11 @@ seo:
     - Adventure tourism for special needs
     - Inclusive adventure experiences
     - Accessible team bonding events
-  social_image: 
+  social_image: /images/accessibility-aj-hackett-international-banner.jpg
   hide-from-google: true
 header:
  - image: /images/accessibility-aj-hackett-international-banner.jpg
-   position: 50% 50%
+   position: 60% 50%
    label: 
    title: Accessibility
    text: "Adventure Without Boundaries: Embracing Accessibility for All"
