--- a/community.html
+++ b/community.html
@@ -15,11 +15,11 @@ seo:
     - Pondok Santi Estate food forest
     - Skypark Cairns charity partnerships
     - community impact adventure tourism
-  social_image: 
+  social_image: /images/community-aj-hackett-international.png
   hide-from-google: true
 header:
  - image: /images/community-aj-hackett-international.png
-   position: 
+   position: 50% 50%
    label: 
    title: Community
    text: "Rooted in Community: Engaging and Giving Back"
