--- a/contact.html
+++ b/contact.html
@@ -1,12 +1,26 @@
 ---
 layout: default
-title: 
+title: Contact Us - Reach AJ Hackett International for Inquiries and Support
 seo:
-  title: 
-  description: 
+  title: "Contact AJ Hackett International: Reach Us at Our Global Locations & Support"
+  description: Get in touch with AJ Hackett International through our contact form or reach out directly to any of our global locations. Find contact details for Skypark Cairns, Skypark Sentosa, Skypark Macau, Skypark Normandie, and Pondok Santi Estate. We're here to assist with any inquiries or requests you may have.
   keywords:
-    - 
-  social_image: 
+    - AJ Hackett International Contact
+    - Skypark Cairns Contact Information
+    - Skypark Sentosa Contact Details
+    - Skypark Macau Contact Information
+    - Skypark Normandie Contact Details
+    - Pondok Santi Estate Contact Information
+    - AJ Hackett International Support
+    - Contact AJ Hackett Adventure Parks
+    - Global Adventure Park Contact
+    - Adventure Tourism Contact
+    - AJ Hackett International Locations
+    - Reach AJ Hackett International
+    - AJ Hackett International Customer Service
+    - Adventure Park Inquiry
+    - Skypark Global Locations Contact
+  social_image: /images/contact-aj-hackett-international.png
   hide-from-google: true
 header:
  - image: /images/contact-aj-hackett-international.png
