--- a/experiences-aj-hackett.html
+++ b/experiences-aj-hackett.html
@@ -21,7 +21,7 @@ seo:
     - Macau Tower experiences
     - Sentosa Skypark
     - Normandie adventure park
-  social_image: 
+  social_image: /images/family-swing-cairns-aj-hackett-international.png
   hide-from-google: true
 header:
  - image: /images/family-swing-cairns-aj-hackett-international.png
