--- a/pondok-santi-estate.html
+++ b/pondok-santi-estate.html
@@ -15,7 +15,7 @@ seo:
     - Pondok Santi Estate reviews
     - Gili Trawangan retreats
     - Elegant resorts in Indonesia
-  social_image: 
+  social_image: /images/pondok-santi-estate-on-gili-trawangan-lombok.png
   hide-from-google: true
 header:
  - image: /images/pondok-santi-estate-on-gili-trawangan-lombok.png
