--- a/projects.html
+++ b/projects.html
@@ -15,7 +15,7 @@ seo:
     - Adventure park renovations
     - Skypark Cairns roof project
     - AJ Hackett adventure park updates
-  social_image: 
+  social_image: /images/ongoing-projects-aj-hackett-international.png
   hide-from-google: true
 header:
  - image: /images/ongoing-projects-aj-hackett-international.png
