--- a/purpose-promise-values.html
+++ b/purpose-promise-values.html
@@ -15,7 +15,7 @@ seo:
     - Community-focused adventure tourism
     - AJ Hackett International purpose
     - Adventure tourism promise and values
-  social_image: 
+  social_image: /images/purpose-promise-values-aj-hackett-international.png
   hide-from-google: true
 header:
  - image: /images/purpose-promise-values-aj-hackett-international.png
