--- a/reconciliation.html
+++ b/reconciliation.html
@@ -15,7 +15,7 @@ seo:
     - Sustainable practices Australia
     - Reconciliation Australia commitment
     - Indigenous land stewardship
-  social_image: 
+  social_image: /images/skypark-cairns-australia-aj-hackett-international.png
   hide-from-google: true
 header:
  - image: /images/skypark-cairns-australia-aj-hackett-international.png
