--- a/safety-management.html
+++ b/safety-management.html
@@ -15,11 +15,11 @@ seo:
     - Compliance with safety legislation
     - Safety equipment standards
     - Adventure activity safety procedures
-  social_image: 
+  social_image: /images/safety-management-banner-aj-hackett-international.png
   hide-from-google: true
 header:
  - image: /images/safety-management-banner-aj-hackett-international.png
-   position: 
+   position: 50% 50%
    label: 
    title: Safety Management
    text: Safeguarding Every Adventure Through Rigorous Practices
