--- a/skypark-aj-hackett.html
+++ b/skypark-aj-hackett.html
@@ -18,7 +18,7 @@ seo:
     - Unique adventure destinations
     - Adrenaline experiences
     - Global adventure parks
-  social_image: 
+  social_image: /images/skypark-aj-hackett-international-banner-image.jpg
   hide-from-google: true
 header:
  - image: /images/skypark-aj-hackett-international-banner-image.jpg
