--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@ seo:
     - Giant swing
     - Adventure travel
     - Adventure tourism safety
-  social_image: 
+  social_image: /images/aj-hackett-international-banner-image.png
   hide-from-google: true
 header:
  - image: /images/aj-hackett-international-banner-image.png
-   position: 
+   position: 50% 50%
    label: 
    title: AJ Hackett International
    text: "Every day, do something that reminds you that you’re still alive."
