--- a/meet-aj-hackett.html
+++ b/meet-aj-hackett.html
@@ -15,11 +15,11 @@ seo:
     - AJ Hackett story
     - Adventure business
     - Extreme sports pioneer
-  social_image: 
+  social_image: /images/meet-aj-hackett-aj-hackett-international.png
   hide-from-google: true
 header:
  - image: /images/meet-aj-hackett-aj-hackett-international.png
-   position: 
+   position: 50% 50%
    label: 
    title: AJ Hackett
    text: A life less ordinary
