--- a/meet-the-team.html
+++ b/meet-the-team.html
@@ -15,7 +15,7 @@ seo:
     - Adventure tourism leadership
     - Global Skyparks team
     - Innovation in adventure tourism
-  social_image: 
+  social_image: /images/meet-the-team-aj-hackett-international-banner.png
   hide-from-google: true
 header:
  - image: /images/meet-the-team-aj-hackett-international-banner.png
