--- a/sustainability.html
+++ b/sustainability.html
@@ -17,11 +17,11 @@ seo:
     - Beach clean-ups Gili Trawangan
     - Bee hives Souleuvre Viaduct
     - Natura 2000 Normandie
-  social_image: 
+  social_image: /images/sustainability-aj-hackett-international-banner.png
   hide-from-google: true
 header:
  - image: /images/sustainability-aj-hackett-international-banner.png
-   position: 
+   position: 50% 50%
    label: 
    title: Sustainability
    text: Our Commitment to a Greener Future
