--- a/timeline.html
+++ b/timeline.html
@@ -15,11 +15,11 @@ seo:
     - AJ Hackett achievements
     - global adventure tourism
     - record-breaking bungy jumps
-  social_image: 
+  social_image: /images/aj-hackett-international-timeline-banner-image.jpg
   hide-from-google: true
 header:
  - image: /images/aj-hackett-international-timeline-banner-image.jpg
-   position: 
+   position: 50% 50%
    label: 
    title: Timeline
    text: The Evolution of Adventure
